veri gönderme ayarında iki adet 2-state switch yerine bir adet 3-state switch kullanıldı.
3-state switch, sunucuya veri gönderme ayarı, için bir uyarı eklenerek kullanıcı anonim göndermeye teşvik edildi.
liste modunde yazar isimlerinin başında '@' karakteri varsa silindi.
bug fix: tüm engelleri kaldırma özelliği ekşi güncellemesi nedeniyle bozulmuştu, düzeltildi.
güncellendi sayfası eklendi.
API limitleri(01.03.23):
  BAN     user, title: 6/dk   mute: ?(stabil değil)
  UNDOBAN user, title: 10/dk  mute: ?(stabil değil)

YÜKSEK ÖNCELİKLİ OLARAK YAPILMASI PLANLANANLAR
notification kısmında tahmini bitiş süresi
max yazar limiti durumu handle edilmeli
performans analizi yapılmalı
  logger'ın etkisi gözlemlenmeli
    array silindiğinde gerçekten bellekten siliniyor mu, reflerden dolayı memory leak oluşuyor mu?
    log.getData yeni arraylere kopyalanıyor mu, ref değeri mi dönüyor?
    obje içinde array silindiğinde reflerin durumu ne oluyor?
[belki]engel nedeni seçilebilmeli
istatiki sonuçlar görüntülenebilmeli
[belki]istatistiki verilere göre engel yapılabilmeli
10000 yazarı engellediği görüldü (5000 yazar ekşi limiti) readme sayfasına eklenebilir.
engel limitine ulaşıldığında durması sağlanmalı ve belki uyarı verebilir.

DÜŞÜK ÖNCELİKLİ OLARAK YAPILMASI PLANLANANLAR
takip edilen yazarlar engellenemesin ayarı
çaylaklar engellensin ayarı (FAV için gerekiyor. LIST ve UNDOBANALL için zaten çalışıyor)
sessize alma özelliğinin davranışları incelenmeli ve kullanıma açılmalı.
  undobanall için user, title ve mute listeleri mergeleniyor. süreç bir şekilde kısaltılmalı.
FAV BAN butonuna basıldığında eğer notification sayfası açıkça otomatik focus olarak kullanıcıya butonun işe yaradığı bilgisi verilerilebilir.
sayfa kapatıldığında iki kere earlyStop sinyali üretiliyor. Buga neden olmuyor. Muhtemelen notification sayfasına bilgi gönderme 
işlemi asenkron olmadığı için buna neden oluyor.
test yazılımı (geliştiriliyor...)