@@ -3,10 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Nasıl Kullanılır</title>
-  <link rel="stylesheet" href="../css/buttons.css">
-  <link rel="stylesheet" href="../css/switchButtons.css">
   <link rel="stylesheet" href="../css/footer.css">
-  <script src="../js/faq.js"></script>
 <style>
 .content {
   font-family: 'Montserrat', sans-serif;
